WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
121532
REGRESSION (
r155854
-
r155967
) block with margin-left adjacent to floated block causes text of subsequent blocks to overlap the floated block.
https://bugs.webkit.org/show_bug.cgi?id=121532
Summary
REGRESSION (r155854 - r155967) block with margin-left adjacent to floated blo...
Philippe Wittenbergh
Reported
2013-09-17 20:09:27 PDT
Created
attachment 211965
[details]
testcase See the test case. Basically: a left-floated block is followed by a block of text that has a left margin. The text in blocks that follow that block will then overlap the floated block. possibly:
http://trac.webkit.org/changeset/155906
? live example:
http://hibbs.armscontrolwonk.com/archive/2215/packing-pistols-in-vienna#comments
see the gravatar image in the comments
Attachments
testcase
(1.33 KB, text/html)
2013-09-17 20:09 PDT
,
Philippe Wittenbergh
no flags
Details
Patch
(5.00 KB, patch)
2013-09-18 17:22 PDT
,
Bem Jones-Bey
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Bem Jones-Bey
Comment 1
2013-09-18 17:22:51 PDT
Created
attachment 212030
[details]
Patch
Andreas Kling
Comment 2
2013-09-18 17:45:03 PDT
Comment on
attachment 212030
[details]
Patch r=me
WebKit Commit Bot
Comment 3
2013-09-18 18:30:07 PDT
Comment on
attachment 212030
[details]
Patch Clearing flags on attachment: 212030 Committed
r156075
: <
http://trac.webkit.org/changeset/156075
>
WebKit Commit Bot
Comment 4
2013-09-18 18:30:09 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug