REGRESSION (r155854 - r155967) block with margin-left adjacent to floated block causes text of subsequent blocks to overlap the floated block. https://bugs.webkit.org/show_bug.cgi?id=121532

Reviewed by Andreas Kling.

Source/WebCore:

When refactoring the code, I ended up adding the margin in instead of
subtracting it in the case of an intruding float. This patch fixes
that so that the margin is properly handled.

Test: fast/block/float/intruding-float-sibling-with-margin.html

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::addIntrudingFloats):

LayoutTests:

* fast/block/float/intruding-float-sibling-with-margin-expected.html: Added.
* fast/block/float/intruding-float-sibling-with-margin.html: Added.


Canonical link: https://commits.webkit.org/139590@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@156075 268f45cc-cd09-0410-ab3c-d52691b4dbfc